WebRoot/js/zimbraMail/config/style/zm.css
/* ... */
/* Vertical space */
DIV.vSpace {
	margin: 10px 0;
}

/* Link to open an attachment */
.AttLink:link, .AttLink:active, .AttLink:visited, .AttLink:hover {
	text-decoration: none;
	cursor:hand;
}
.AttLink:link, .AttLink:active, .AttLink:visited {
	color: black;
}
.Row-selected .AttLink:link, .Row-selected .AttLink:active, .Row-selected .AttLink:visited {
	color: white;
}
.AttLink:hover, .Row-selected .AttLink:hover {color: #CC3333;}

/* 
* Drag N Drop
*/

.DndIcon {
	filter:alpha(opacity=70)
		   progid:DXImageTransform.Microsoft.Shadow(color=black,direction=135,strength=8);
	-moz-opacity:0.7;
	opacity:0.7;
}

.DropNotAllowed {
	border: 2px solid red;
	background-color: white;	
	filter:alpha(opacity=70)
		   progid:DXImageTransform.Microsoft.Shadow(color=black,direction=135,strength=8);
	-moz-opacity:0.7;
	opacity:0.7;	
}
.DropAllowed {
	border: 2px solid green;
	background-color: white;	
	filter:alpha(opacity=70)
		   progid:DXImageTransform.Microsoft.Shadow(color=black,direction=135,strength=8);
	-moz-opacity:0.7;
	opacity:0.7;
}

/* bug fix# 3235 */
.DropNotAllowed-linux {
	border: 2px solid red;
	background-color: white;	
}
/* bug fix# 3235 */
.DropAllowed-linux {
	border: 2px solid green;
	background-color: white;	
}

/* Used by the text in the multi-select Icon */
.MailMultiSelectText {
	font-weight: bold;
	color: white;
}

/*
* Top-level (shell) stuff
*/

.DwtShell, .MainShell {
    width: "100%";
    height: "100%";
  position:absolute;
  top:0px;
  left:0px;
}
.MainShell {
	background-color: #B7B7B7;
	background-image:url(/zimbra/skins/steel/images/bg_steel.gif);
}

/* As of 07/22/05 Linux (or rather X) has a nasty issue that causes a huge perf problem with opacity.*/
.BusyOverlay-linux table, .VeilOverlay-linux table {
	cursor: "wait";
	background-color: transparent;
}

.BusyOverlay table, .VeilOverlay table {
	filter:alpha(opacity=50);
	-moz-opacity:0.5;
	opacity:0.5;
	cursor: "wait";
	background-color: transparent;
}

.VeilOverlay table {
	cursor: "not-allowed";
	background-color: white;
}

.VeilOverlay-linux table {
	cursor: "not-allowed";
}

/*
* Splash Screen
*/
.ZmSplashScreen, .ZmSplashScreen table {
	background-color: #B7B7B7;
	background-image:url(/zimbra/skins/steel/images/bg_steel.gif);
}

/*
* Banner (enlarges, turns green when angry)
*/

.oldLogo { 
  height:38px;
  width:200px;
}

.LogoContainer {
	left: 54px;
	top: 6px;
}

.BannerBar {height: 30}

.BannerBar .quotabar {
	width: 100px;
	border: 1px solid white;
	background-color: white;
}

.BannerBar .quotaused {
	height: 6px;
	font-size: 6px; /* WEIRD IE QUIRK */
}

.BannerBar .percent {
	white-space: nowrap;
	font-size: 7pt;
	color: black;
}

.BannerBar td {padding-right: 5px;}

.BannerBar img {
	border: none;
	margin-right: 2px;
}

.BannerBar .BannerText {
	color: black;
	text-align: center;
}

.BannerBar .BannerTextUser {
	color: black;
	text-align: center;
	font-weight: bold;
	cursor: default;
	white-space: nowrap;
}

/*
* Tool tips
*/

.DwtToolTip {	}

/*
* Sashes
*/

.DwtSash, .AppSash-horiz, .AppSash-vert { 
	background-color: #666666;
}
.AppSash-horiz { width: 5px; }
.AppSash-vert { 
	height: 5px;
	width: 100%;
	font-size: 5px; /* WEIRD IE QUIRK */
}

/*
* Trees
*/

.DwtTree, .DwtTreeItem {
	background-color: transparent;
	cursor: default;
}

.DwtTreeItem, .DwtTreeItem-selected, .DwtTreeItem-actioned {
	padding-top:1px;
	padding-left:2px;
	padding-right:2px;
	cursor: default;
}

.DwtTreeItem-selected {
	background-color: #ADD6D6;
}

.DwtTreeItem-actioned {
	background-color: #D6EBEB;
}

.DwtTreeItem-DragOver {
	background-color: #339999;
}

.DwtTreeItem .imageCell, .overviewPanelHeader .imageCell {
	padding-right:4px;
	white-space: nowrap;
}

.DwtTreeItemChildDiv {
	padding-left:16px;
}

.DwtTreeItemLevel1ChildDiv {
	padding-top:2px;
}


/*
* Tool Bars
*/

.ZmToolBar {
	background-color: #EEEEEE;
	width: 100%;
	Xfilter:progid:DXImageTransform.Microsoft.Gradient(startColorStr=#FFF0F0F0,endColorStr=#FF9997B5);
}
.ZmBrowseToolBar {
	height: 100%;
	width: 100%;
}
.ZmAppToolBar {
	height: 100%;
	width: 100%;
}
/* toolbar in child window */
.ZmAppToolBar_cw {
	width: 100%;
	background-color: #EEEEEE;
}
.ZmNavToolBar {background-color: transparent;}
.ZmInviteToolBar { 
	background-image:url(/zimbra/skins/steel/images/bg_pebble.gif);
	padding: 2px; 
	border-bottom: 1px solid #777777;
}





td.DDSepVisible div {background-color:black; width:1px;overflow:hidden;}
td.DDSepInvisible div {background-color:transparent;width:1px;overflow:hidden;}




/*
* Buttons
*
* The background color is set by a modifier.
* TBButton - toolbar button, very light border (so we can show a border on mouseover)
* States for buttons:
*	-activated	-- mouseover state
*	-triggered	-- mousedown state
*/


.TBButton {
	border: 1px solid #EEEEEE;
}

.TBButtonWhite {
	border: 1px solid white;
}

.DwtButton, .ColorButton, .TBButton-activated, .TBButtonWhite-activated {
	background-image:url(/zimbra/skins/steel/images/bg_button_up.gif);
	border: 1px solid;
	border-color: #E0E0E0 #555555 #555555 #E0E0E0;
}

.DwtButton-activated, .ColorButton-activated {
	background-image:url(/zimbra/skins/steel/images/bg_button_down.gif);
	border: 1px solid;
	border-color: #E0E0E0 #555555 #555555 #E0E0E0;
}

.DwtButton-triggered, .ColorButton-triggered, .TBButton-triggered, .TBButtonWhite-triggered {
	background-image:url(/zimbra/skins/steel/images/bg_button_down.gif);
	border:1px solid;
	border-color: #555555 #E0E0E0 #E0E0E0 #555555;
}


.DwtButton-toggled, .ColorButton-toggled, .TBButton-toggled, .TBButtonWhite-toggled {
	background-image:url(/zimbra/skins/steel/images/bg_button_down.gif);
	border:1px solid;
	border-color: #555555 #E0E0E0 #E0E0E0 #555555;
}
/* ... */

