http://bugzilla.liquidsys.com/show_bug.cgi?id=438 bug: 438 - OVERVIEW: left pixel of text clipped on IE
Copied from Perforce
 Change: 12007

--- a/WebRoot/js/zimbraMail/config/style/zm.css
+++ b/WebRoot/js/zimbraMail/config/style/zm.css
@@ -335,6 +335,12 @@ DIV.vSpace {
 	cursor: default;
 }
 
+.DwtTreeItem-Text {
+	padding-top:1px;
+	padding-left:2px;
+	padding-right:2px;
+}
+
 .DwtTreeItem-selected {
 	background-color: #ADD6D6;
 }
